netbox/netbox-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: netbox
    app.kubernetes.io/component: netbox
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/name: netbox
    app.openshift.io/runtime: netbox
    app.openshift.io/runtime-namespace: netbox
    app.openshift.io/runtime-version: latest
  name: netbox
  namespace: netbox
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: netbox
    deploymentconfig: netbox
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    type: Recreate
  template:
    metadata:
      labels:
        app: netbox
        deploymentconfig: netbox
    spec:
      containers:
      - env:
        - name: DB_NAME
          valueFrom:
            secretKeyRef:
              key: database-name
              name: netbox-postgres
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: netbox-postgres
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: netbox-postgres
        - name: REDIS_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: netbox-redis
        image: >-
          image-registry.openshift-image-registry.svc:5000/netbox/netbox-community:latest
        imagePullPolicy: IfNotPresent
        name: netbox
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/netbox/media
          name: netbox-media-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: netbox-media-data
        persistentVolumeClaim:
          claimName: netbox-media
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - netbox-community
      from:
        kind: ImageStreamTag
        name: netbox-community:latest
        namespace: netbox
    type: ImageChange
  - type: ConfigChange
