netbox/netbox-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox-metrics
  namespace: netbox
  labels:
    k8s-app: netbox-metrics
spec:
  ports:
    - name: metrics
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: netbox
