netbox/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netbox
    app.kubernetes.io/instance: netbox
  name: netbox-postgres
  namespace: netbox
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    deploymentconfig: netbox-postgres
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
