netbox/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netbox
  annotations:
    app.kubernetes.io/component: redis
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/part-of: netbox
  name: netbox-redis
  namespace: netbox
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    deployment: netbox-redis
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
