netbox/netbox-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: "2021-05-02T18:56:20Z"
  labels:
    app: netbox
  annotations:
    app.kubernetes.io/component: netbox
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/part-of: netbox
  name: netbox
  namespace: netbox
spec:
  host: netbox.apps.snolab.csfreak.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: netbox
    weight: 100
  wildcardPolicy: None
